--- a/lambdas/resize/Dockerfile
+++ b/lambdas/resize/Dockerfile
@@ -3,8 +3,15 @@ FROM public.ecr.aws/lambda/python:3.13
 # install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-############
-#
-# TODO: implement the rest of the image
-#
-############
+# copy pyproject.toml and install dependencies
+COPY pyproject.toml ${LAMBDA_TASK_ROOT}/
+RUN uv sync --frozen
+
+# copy handler code
+COPY handler.py ${LAMBDA_TASK_ROOT}/
+
+# set PYTHONPATH to include the virtual environment
+ENV PYTHONPATH=${LAMBDA_TASK_ROOT}/.venv/lib/python3.13/site-packages
+
+# set the CMD to your handler
+CMD ["resize_handler"]
