--- a/lambdas/resize/Dockerfile
+++ b/lambdas/resize/Dockerfile
@@ -14,4 +14,4 @@ COPY handler.py ${LAMBDA_TASK_ROOT}/
 ENV PYTHONPATH=${LAMBDA_TASK_ROOT}/.venv/lib/python3.13/site-packages
 
 # set the CMD to your handler
-CMD ["resize_handler"]
+CMD ["handler.resize_handler"]
